--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -15,10 +15,10 @@
       "  Intermediate buffers: 1\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 516\n",
-      "  IR Compile time: 7.392900 ms\n",
-      "  Host Compile time: 1624.092773 ms\n",
-      "  Shader Compile time: 1.586300 ms\n",
+      "  Lines of generated code: 539\n",
+      "  IR Compile time: 7.225900 ms\n",
+      "  Host Compile time: 1393.135010 ms\n",
+      "  Shader Compile time: 1.892000 ms\n",
       "\n"
      ]
     }
@@ -55,8 +55,8 @@
     "        Q[j, i] = A[j, i] / R[i, i]\n",
     "\n",
     "        p, k = tf.index_grid([0, i + 1], [m, n])\n",
-    "        t, = tf.index_grid([i+1], [n])\n",
-    "        R[i, t] = tf.sum(Q[p, i] * A[p, k], axis=0)\n",
+    "        dot = tf.sum(Q[p, i] * A[p, k], axis=0)\n",
+    "        R[i, dot.indices[0] + i + 1] = dot\n",
     "        A[p, k] -= Q[p, i] * R[i, k]\n",
     "\n",
     "    R[n-1, n-1] = tf.norm(A[j, n-1])\n",
@@ -117,12 +117,12 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 2.0328117071991353e-16\n",
-      "Error using TensorFrost: 1.6185606230763885e-07\n",
+      "Error: 1.415262216750919e-16\n",
+      "Error using TensorFrost: 1.525619142129995e-07\n",
       "R inversion is correct: True\n",
-      "Error: 6.439323561312488e-06\n",
+      "Error: 1.1949137297464748e-06\n",
       "Full inversion is correct: False\n",
-      "Error: 3.378898980856315e-05\n"
+      "Error: 3.16396109159234e-06\n"
      ]
     }
    ],
