--- a/examples/Rendering/neural_embed.ipynb
+++ b/examples/Rendering/neural_embed.ipynb
@@ -11,22 +11,24 @@
      "text": [
       "TensorFrost module loaded!\n",
       "NeuralEmbed:\n",
-      "  Kernel count: 18\n",
-      "  Intermediate buffers: 11\n",
+      "  Kernel count: 34\n",
+      "  Intermediate buffers: 24\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 564\n",
-      "  IR Compile time: 38.026901 ms\n",
-      "  Steps time: 1902.769287 ms\n",
+      "  Lines of generated code: 660\n",
+      "  IR Compile time: 42.691299 ms\n",
+      "  Host Compile time: 2117.507080 ms\n",
+      "  Shader Compile time: 161.291504 ms\n",
       "\n",
       "RenderImage:\n",
-      "  Kernel count: 2\n",
-      "  Intermediate buffers: 1\n",
+      "  Kernel count: 6\n",
+      "  Intermediate buffers: 5\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 484\n",
-      "  IR Compile time: 8.454400 ms\n",
-      "  Steps time: 1520.788086 ms\n",
+      "  Lines of generated code: 521\n",
+      "  IR Compile time: 7.089400 ms\n",
+      "  Host Compile time: 1557.647827 ms\n",
+      "  Shader Compile time: 13.347000 ms\n",
       "\n"
      ]
     }
@@ -41,30 +43,7 @@
     "\n",
     "ImageW = 1000\n",
     "ImageH = 1000\n",
-    "RN = 32\n",
-    "\n",
-    "def sample(tex, i, j, k):\n",
-    "    return tex[i, j, k]\n",
-    "    #res = tf.clamp(tf.round(127.0*tex[i, j, k]).pass_grad(), -127.0, 127.0)\n",
-    "    #return res / 127.0\n",
-    "\n",
-    "def bilinear(tex, x, y, ch):\n",
-    "    #offset each channel to avoid discontinuities\n",
-    "    chidx = ch/4\n",
-    "    offset_x = tf.float(chidx%2) / 2.0\n",
-    "    offset_y = tf.float(chidx/2) / 2.0\n",
-    "    x, y = x+offset_x, y+offset_y\n",
-    "    xi, yi = tf.floor(x), tf.floor(y)\n",
-    "    xf, yf = x-xi, y-yi\n",
-    "    xi, yi = tf.int(xi), tf.int(yi)\n",
-    "\n",
-    "    #fake cubic interpolation\n",
-    "    xf = tf.smoothstep(0.0, 1.0, xf)\n",
-    "    yf = tf.smoothstep(0.0, 1.0, yf)\n",
-    "\n",
-    "    oxf, oyf = 1.0-xf, 1.0-yf\n",
-    "    #return tex[xi, yi, ch]*oxf*oyf + tex[xi+1, yi, ch]*xf*oyf + tex[xi, yi+1, ch]*oxf*yf + tex[xi+1, yi+1, ch]*xf*yf\n",
-    "    return sample(tex, xi, yi, ch)*oxf*oyf + sample(tex, xi+1, yi, ch)*xf*oyf + sample(tex, xi, yi+1, ch)*oxf*yf + sample(tex, xi+1, yi+1, ch)*xf*yf\n",
+    "RN = 64\n",
     "\n",
     "def cubic_hermit(x):\n",
     "    x2 = x * x\n",
@@ -102,14 +81,42 @@
     "        self.channel_count = channel_count\n",
     "        self.embedding_channels = embedding_channels\n",
     "        self.hidden_size = embedding_channels\n",
-    "        self.tex = tf.Parameter([embedding_size, embedding_size, embedding_channels], tf.float32, random_scale = 0.15)\n",
+    "        self.dequant_scale = tf.Parameter([embedding_channels], tf.float32, random_scale = 2.0)\n",
+    "        self.dequant_bias = tf.Parameter([embedding_channels], tf.float32, random_scale = 0.0)\n",
+    "        self.tex = tf.Parameter([embedding_size, embedding_size, embedding_channels], tf.float32, random_scale = 1.0)\n",
     "        self.fc1 = tf.Parameter([embedding_channels, self.hidden_size], tf.float32) \n",
-    "        self.fc2 = tf.Parameter([self.hidden_size+1, channel_count], tf.float32)\n",
+    "        self.fc2 = tf.Parameter([self.hidden_size+1, self.hidden_size], tf.float32)\n",
+    "        self.fc3 = tf.Parameter([self.hidden_size+1, channel_count], tf.float32)\n",
+    "\n",
+    "    def sample(self, i, j, k):\n",
+    "        res = self.tex[i, j, k]\n",
+    "        #res = tf.clamp(tf.round(127.0*self.tex[i, j, k]).pass_grad(), -127.0, 127.0) / 127.0\n",
+    "        return res\n",
+    "\n",
+    "    def bilinear(self, x, y, ch):\n",
+    "        #offset each channel to avoid zeros in the gradients\n",
+    "        chidx = ch/4\n",
+    "        offset_x = tf.float(chidx%2) / 2.0\n",
+    "        offset_y = tf.float(chidx/2) / 2.0\n",
+    "        x, y = x+offset_x, y+offset_y\n",
+    "        xi, yi = tf.floor(x), tf.floor(y)\n",
+    "        xf, yf = x-xi, y-yi\n",
+    "        xi, yi = tf.int(xi), tf.int(yi)\n",
+    "\n",
+    "        #fake cubic interpolation\n",
+    "        xf = tf.smoothstep(0.0, 1.0, xf)\n",
+    "        yf = tf.smoothstep(0.0, 1.0, yf)\n",
+    "\n",
+    "        oxf, oyf = 1.0-xf, 1.0-yf\n",
+    "        interp_res = self.sample(xi, yi, ch)*oxf*oyf + self.sample(xi+1, yi, ch)*xf*oyf + self.sample(xi, yi+1, ch)*oxf*yf + self.sample(xi+1, yi+1, ch)*xf*yf\n",
+    "        return interp_res * self.dequant_scale[ch] + self.dequant_bias[ch]\n",
+    "\n",
     "   \n",
     "    def forward(self, x, y):\n",
-    "        embed = bilinear(self.tex, x, y, x.indices[-1])\n",
-    "        embed = tf.sin(4.0*mul_bias(embed, self.fc1))\n",
-    "        return (mul_bias(embed, self.fc2))\n",
+    "        embed = self.bilinear(x, y, x.indices[-1])\n",
+    "        embed = tf.sin(mul_bias(embed, self.fc1))\n",
+    "        embed = tf.sin(mul_bias(embed, self.fc2))\n",
+    "        return (mul_bias(embed, self.fc3))\n",
     "\n",
     "    def loss(self, X, Y):\n",
     "        i, j = tf.indices([X.shape[0], self.embedding_channels])\n",
@@ -127,6 +134,7 @@
     "\n",
     "    model = TextureEmbedder()\n",
     "    opt = tf.optimizers.adam(model, learning_rate = learning_rate)\n",
+    "    #opt.set_clipping_type(tf.clipping.norm)\n",
     "    opt.initialize_input()\n",
     "\n",
     "    loss = opt.step(pos, val)\n",
@@ -227,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10996\\2381237510.py:43: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_13472\\2381237510.py:43: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  tf.imgui.text(\"Loss: %.5f\" % loss_val)\n"
      ]
     },
@@ -235,14 +243,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final loss: 0.00131\n"
+      "Final loss: 0.00025\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10996\\2381237510.py:53: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_13472\\2381237510.py:53: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  print(\"Final loss: %.5f\" % loss_val)\n"
      ]
     }
@@ -309,26 +317,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Plot the loss\n",
-    "# plt.plot(np.log(loss_hist))\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #plot the embeddings\n",
-    "# embedding = tex_tf.numpy\n",
-    "# #get quantized version\n",
-    "# #embedding = np.round(embedding*127.0)\n",
-    "# #embedding = np.clip(embedding, -127.0, 127.0)\n",
-    "# for i in range(embedding.shape[2]):\n",
-    "#     plt.imshow(embedding[:,:,i])\n",
-    "#     plt.colorbar()\n",
-    "#     plt.show()"
+    "# embedding = model.tex.numpy\n",
+    "# #plot histogram for each channel\n",
+    "# for i in range(embedding.shape[-1]):\n",
+    "#     plt.hist(embedding[:,:,i].flatten(), bins=16)\n",
+    "#     plt.show()\n"
    ]
   }
  ],
