--- a/examples/Algorithms/bitonic.ipynb
+++ b/examples/Algorithms/bitonic.ipynb
@@ -9,15 +9,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
+      "TensorFrost module loaded in debug mode! Expect slow performance.\n",
       "Bitonic:\n",
       "  Kernel count: 1\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 555\n",
-      "  IR Compile time: 2.256900 ms\n",
-      "  Host Compile time: 1482.148315 ms\n",
+      "  Lines of generated code: 557\n",
+      "  IR Compile time: 85.848396 ms\n",
+      "  Host Compile time: 1493.195679 ms\n",
       "\n"
      ]
     }
