Fix some minor bugs + add range hint

--- a/examples/Algorithms/scan.ipynb
+++ b/examples/Algorithms/scan.ipynb
@@ -11,13 +11,15 @@
      "text": [
       "TensorFrost module loaded!\n",
       "Scan:\n",
-      "  Kernel count: 5\n",
-      "  Intermediate buffers: 0\n",
+      "  Kernel count: 4\n",
+      "  Intermediate buffers: 3\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 493\n",
-      "  IR Compile time: 5.439100 ms\n",
-      "  Steps time: 1511.394409 ms\n",
+      "  Lines of generated code: 516\n",
+      "  IR Compile time: 6.016800 ms\n",
+      "  Codegen time: 1.004700 ms\n",
+      "  Host Compile time: 1455.829956 ms\n",
+      "  Shader Compile time: 0.699500 ms\n",
       "\n"
      ]
     }
@@ -29,7 +31,7 @@
     "\n",
     "tf.initialize(tf.opengl)\n",
     "\n",
-    "test_axis = 1\n",
+    "test_axis = -1\n",
     "\n",
     "def PrefixSum(A, axis = -1):\n",
     "    axis = len(A.shape) + axis if axis < 0 else axis\n",
@@ -57,32 +59,23 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error:  0\n",
-      "Data:  [1 9 2 2 5 6 2 2 3 5 3 0 1 7 6 6 6 5 5 5 6 7 9 5 5]\n",
-      "Grouped Scan:  [  1  10  12  14  19  25  27  29  32  37  40  40  41  48  54  60  66  71\n",
-      "  76  81  87  94 103 108 113]\n",
-      "Grouped Scan:  [  1  10  12  14  19  25  27  29  32  37  40  40  41  48  54  60  66  71\n",
-      "  76  81  87  94 103 108 113 113 113 113 113 113 113 113]\n",
-      "Grouped Scan:  [  1  10  12  14  19  25  27  29  32  37  40  40  41  48  54  60  66  71\n",
-      "  76  81  87  94 103 108 113]\n",
-      "Grouped:  [1 9 2 2 5 6 2 2 3 5 3 0 1 7 6 6 6 5 5 5 6 7 9 5 5 0 0 0 0 0 0 0]\n",
-      "Grouped Scan1:  [ 29  60 108 113]\n",
-      "Full Scan:  [  1  10  12  14  19  25  27  29  32  37  40  40  41  48  54  60  66  71\n",
-      "  76  81  87  94 103 108 113]\n",
-      "Sums:  [29 31 48  5]\n",
-      "Diff:  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (25,153,128) (25,61,153) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m scan_np \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mcumsum(data, axis\u001b[38;5;241m=\u001b[39mtest_axis)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m#print error\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError: \u001b[39m\u001b[38;5;124m\"\u001b[39m, np\u001b[38;5;241m.\u001b[39mmax(np\u001b[38;5;241m.\u001b[39mabs(\u001b[43mscan_tf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mscan_np\u001b[49m)))\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData: \u001b[39m\u001b[38;5;124m\"\u001b[39m, data\u001b[38;5;241m.\u001b[39mflatten())\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDiff: \u001b[39m\u001b[38;5;124m\"\u001b[39m, np\u001b[38;5;241m.\u001b[39mabs(scan_tf\u001b[38;5;241m.\u001b[39mnumpy \u001b[38;5;241m-\u001b[39m scan_np)\u001b[38;5;241m.\u001b[39mflatten())\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (25,153,128) (25,61,153) "
      ]
     }
    ],
    "source": [
     "# Generate some random data to scan (ints between 0 and 10)\n",
-    "data = np.random.randint(0, 10, (25, 1), dtype=np.int32)\n",
+    "data = np.random.randint(0, 10, (25, 61,153), dtype=np.int32)\n",
     "\n",
     "data_tf = tf.tensor(data)\n",
-    "scan_tf, grouped, group_scan1, group_scan, sums = scan_program(data_tf)\n",
+    "scan_tf = scan_program(data_tf)\n",
     "\n",
     "# do scan in numpy\n",
     "scan_np = np.cumsum(data, axis=test_axis)\n",
@@ -91,13 +84,6 @@
     "print(\"Error: \", np.max(np.abs(scan_tf.numpy - scan_np)))\n",
     "\n",
     "print(\"Data: \", data.flatten())\n",
-    "print(\"Grouped Scan: \", scan_np.flatten())\n",
-    "print(\"Grouped Scan: \", group_scan.numpy.flatten())\n",
-    "print(\"Grouped Scan: \", scan_tf.numpy.flatten())\n",
-    "print(\"Grouped: \", grouped.numpy.flatten())\n",
-    "print(\"Grouped Scan1: \", group_scan1.numpy.flatten())\n",
-    "print(\"Full Scan: \", scan_tf.numpy.flatten())\n",
-    "print(\"Sums: \", sums.numpy.flatten())\n",
     "print(\"Diff: \", np.abs(scan_tf.numpy - scan_np).flatten())"
    ]
   }
