--- a/examples/Algorithms/fft.ipynb
+++ b/examples/Algorithms/fft.ipynb
@@ -15,9 +15,10 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 495\n",
-      "  IR Compile time: 3.077600 ms\n",
-      "  Compiler time: 1470.823730 ms\n",
+      "  Lines of generated code: 567\n",
+      "  IR Compile time: 3.387800 ms\n",
+      "  Codegen time: 0.526100 ms\n",
+      "  Host Compile time: 1710.607910 ms\n",
       "\n"
      ]
     }
