--- a/examples/Algorithms/fft_group.ipynb
+++ b/examples/Algorithms/fft_group.ipynb
@@ -9,18 +9,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
-      "FFT:\n",
-      "  Kernel count: 1\n",
-      "  Intermediate buffers: 0\n",
-      "  Host readbacks: 0\n",
-      "  Host writes: 0\n",
-      "  Lines of generated code: 542\n",
-      "  IR Compile time: 11.146700 ms\n",
-      "  Codegen time: 1.679300 ms\n",
-      "  Host Compile time: 1387.222168 ms\n",
-      "  Shader Compile time: 44.394798 ms\n",
-      "\n"
+      "TensorFrost module loaded!\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "group_buffer(): incompatible function arguments. The following argument types are supported:\n    1. (size: int, type: TensorFrost.TensorFrost.TFDataFormat = <TFDataFormat: type=float, size=32>) -> TensorFrost.TensorFrost.Tensor\n\nInvoked with: int(32) (32) = mul(inputs=[(1024),(2)], ), <TFDataFormat: type=float, size=32>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 70\u001b[0m\n\u001b[0;32m     66\u001b[0m             A[rowIndex, \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m temp[\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mrowIndex \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mfloat\u001b[39m(N \u001b[38;5;28;01mif\u001b[39;00m inverse \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m A\n\u001b[1;32m---> 70\u001b[0m fft \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mFFT\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 42\u001b[0m, in \u001b[0;36mFFT\u001b[1;34m()\u001b[0m\n\u001b[0;32m     39\u001b[0m     temp[\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mk2 \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m v1[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m v2[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     41\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mkernel([N], group_size\u001b[38;5;241m=\u001b[39m[BK]) \u001b[38;5;28;01mas\u001b[39;00m group_index:\n\u001b[1;32m---> 42\u001b[0m     temp \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroup_buffer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mN\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     43\u001b[0m     tx \u001b[38;5;241m=\u001b[39m group_index\u001b[38;5;241m.\u001b[39mblock_thread_index(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     45\u001b[0m     M \u001b[38;5;241m=\u001b[39m N \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m BK\n",
+      "\u001b[1;31mTypeError\u001b[0m: group_buffer(): incompatible function arguments. The following argument types are supported:\n    1. (size: int, type: TensorFrost.TensorFrost.TFDataFormat = <TFDataFormat: type=float, size=32>) -> TensorFrost.TensorFrost.Tensor\n\nInvoked with: int(32) (32) = mul(inputs=[(1024),(2)], ), <TFDataFormat: type=float, size=32>"
      ]
     }
    ],
@@ -64,7 +65,6 @@
     "        temp[2*k2] = v1[0] - v2[0]\n",
     "        temp[2*k2 + 1] = v1[1] - v2[1]\n",
     "\n",
-    "    #2d local + group tiled version\n",
     "    with tf.kernel([N], group_size=[BK]) as group_index:\n",
     "        temp = tf.group_buffer(N*2, tf.float32)\n",
     "        tx = group_index.block_thread_index(0)\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
